Added basic admob plugin and a sample banner ad. TOTO: test.

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
         
         <meta name="Title" content="Olympic Quiz" />
         <meta name="description" content="Olympic Quiz Game is a free general knowledge quiz questions and multiple choice answers on Rio Olympic.">
-		<meta name="keywords" content="quiz, game, olympic, knowledge, questions, choice, answers, rio, 2016, brain, marakana, idiot,brazil">
+    		<meta name="keywords" content="quiz, game, olympic, knowledge, questions, choice, answers, rio, 2016, brain, marakana, idiot,brazil">
         
         <!-- for Facebook -->
         <meta property="og:title" content="Quiz Game"/>
@@ -36,6 +36,36 @@
             document.getElementsByTagName("head")[0].
                 appendChild(msViewportStyle);
         }
+
+        var admobid = {};
+        if( /(android)/i.test(navigator.userAgent) ) {
+            admobid = { // for Android
+                banner: 'ca-app-pub-7696229031817893/5319744763',
+                // interstitial: 'ca-app-pub-6869992474017983/1657046752'
+            };
+        } else if(/(ipod|iphone|ipad)/i.test(navigator.userAgent)) {
+            admobid = { // for iOS
+                banner: 'ca-app-pub-6869992474017983/4806197152',
+                interstitial: 'ca-app-pub-6869992474017983/7563979554'
+            };
+        } else {
+            admobid = { // for Windows Phone
+                banner: 'ca-app-pub-6869992474017983/8878394753',
+                interstitial: 'ca-app-pub-6869992474017983/1355127956'
+            };
+        }
+
+        function initApp() {
+            if (AdMob) {
+                AdMob.createBanner({
+                    adId : admobid.banner,
+                    position : AdMob.AD_POSITION.BOTTOM_CENTER,
+                    autoShow : true
+                });
+            }
+        }
+
+        document.addEventListener('deviceready', initApp, false);
         </script>
 
         <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
