--- a/www/index.html
+++ b/www/index.html
@@ -25,47 +25,51 @@
         <meta name="twitter:image" content="http://demonisblack.com/code/quizgame/game/share.jpg" />
         
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<script>
-        if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
-            var msViewportStyle = document.createElement("style");
-            msViewportStyle.appendChild(
-                document.createTextNode(
-                    "@-ms-viewport{width:device-width}"
-                )
-            );
-            document.getElementsByTagName("head")[0].
-                appendChild(msViewportStyle);
-        }
 
-        var admobid = {};
-        if( /(android)/i.test(navigator.userAgent) ) {
-            admobid = { // for Android
-                banner: 'ca-app-pub-7696229031817893/5319744763',
-                // interstitial: 'ca-app-pub-6869992474017983/1657046752'
-            };
-        } else if(/(ipod|iphone|ipad)/i.test(navigator.userAgent)) {
-            admobid = { // for iOS
-                banner: 'ca-app-pub-6869992474017983/4806197152',
-                interstitial: 'ca-app-pub-6869992474017983/7563979554'
-            };
-        } else {
-            admobid = { // for Windows Phone
-                banner: 'ca-app-pub-6869992474017983/8878394753',
-                interstitial: 'ca-app-pub-6869992474017983/1355127956'
-            };
-        }
+        <script type="text/javascript" src="cordova.js"></script>
 
-        function initApp() {
-            if (AdMob) {
-                AdMob.createBanner({
-                    adId : admobid.banner,
-                    position : AdMob.AD_POSITION.BOTTOM_CENTER,
-                    autoShow : true
-                });
+        <script>
+            if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
+                var msViewportStyle = document.createElement("style");
+                msViewportStyle.appendChild(
+                    document.createTextNode(
+                        "@-ms-viewport{width:device-width}"
+                    )
+                );
+                document.getElementsByTagName("head")[0].
+                    appendChild(msViewportStyle);
             }
-        }
 
-        document.addEventListener('deviceready', initApp, false);
+            var admobid = {};
+            if( /(android)/i.test(navigator.userAgent) ) {
+                admobid = { // for Android
+                    banner: 'ca-app-pub-7696229031817893/5319744763',
+                    // interstitial: 'ca-app-pub-6869992474017983/1657046752'
+                };
+            } else if(/(ipod|iphone|ipad)/i.test(navigator.userAgent)) {
+                admobid = { // for iOS
+    //                banner: 'ca-app-pub-6869992474017983/4806197152',
+    //                interstitial: 'ca-app-pub-6869992474017983/7563979554'
+                };
+            } else {
+                admobid = { // for Windows Phone
+    //                banner: 'ca-app-pub-6869992474017983/8878394753',
+    //                interstitial: 'ca-app-pub-6869992474017983/1355127956'
+                };
+            }
+
+            function initApp() {
+                console.log("Hello world.")
+                if (AdMob) {
+                    AdMob.createBanner({
+                        adId : admobid.banner,
+                        position : AdMob.AD_POSITION.BOTTOM_CENTER,
+                        autoShow : true
+                    });
+                }
+            }
+
+            document.addEventListener('deviceready', initApp, false);
         </script>
 
         <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
@@ -121,15 +125,5 @@
         <script src="js/main.js"></script>
         <script src="js/loader.js"></script>
         <script src="js/init.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		  ga('create', 'UA-424386-45', 'auto');
-		  ga('send', 'pageview');
-		</script>
     </body>
 </html>
