--- a/platforms/browser/index.html
+++ b/platforms/browser/index.html
@@ -1,43 +1,128 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    http://www.apache.org/licenses/LICENSE-2.0
+    <meta name="Title" content="Olympic Quiz Game" />
+    <meta name="description" content="Olympic Quiz Game is a free general knowledge quiz questions and multiple choice answers on Rio Olympic.">
+    <meta name="keywords" content="quiz, game, olympic, knowledge, questions, choice, answers, rio, 2016, brain, marakana, idiot,brazil">
 
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+    <!-- for Facebook -->
+    <meta property="og:title" content="Quiz Game"/>
+    <meta property="og:site_name" content="Quiz Game"/>
+    <meta property="og:image" content="http://demonisblack.com/code/quizgame/game/share.jpg" />
+    <meta property="og:url" content="http://demonisblack.com/code/quizgame/game/" />
+    <meta property="og:description" content="Olympic Quiz Game is a free general knowledge quiz questions and multiple choice answers on Rio Olympic.">
+
+    <!-- for Twitter -->
+    <meta name="twitter:title" content="Quiz Game" />
+    <meta name="twitter:description" content="Olympic Quiz Game is a free general knowledge quiz questions and multiple choice answers on Rio Olympic." />
+    <meta name="twitter:image" content="http://demonisblack.com/code/quizgame/game/share.jpg" />
+
+    <title>Olympic Quiz Game</title>
+
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <script type="text/javascript" src="cordova.js"></script>
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script>
+        if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
+            var msViewportStyle = document.createElement("style");
+            msViewportStyle.appendChild(
+                document.createTextNode(
+                    "@-ms-viewport{width:device-width}"
+                )
+            );
+            document.getElementsByTagName("head")[0].
+            appendChild(msViewportStyle);
+        }
+
+        var admobid = {};
+        if( /(android)/i.test(navigator.userAgent) ) {
+            admobid = { // for Android
+                banner: 'ca-app-pub-7696229031817893/5319744763',
+                // interstitial: 'ca-app-pub-6869992474017983/1657046752'
+            };
+        } else if(/(ipod|iphone|ipad)/i.test(navigator.userAgent)) {
+            admobid = { // for iOS
+                //                banner: 'ca-app-pub-6869992474017983/4806197152',
+                //                interstitial: 'ca-app-pub-6869992474017983/7563979554'
+            };
+        } else {
+            admobid = { // for Windows Phone
+                //                banner: 'ca-app-pub-6869992474017983/8878394753',
+                //                interstitial: 'ca-app-pub-6869992474017983/1355127956'
+            };
+        }
+
+        function initApp() {
+            console.log("Hello world.")
+            if (AdMob) {
+                AdMob.createBanner({
+                    adId : admobid.banner,
+                    position : AdMob.AD_POSITION.BOTTOM_CENTER,
+                    autoShow : true
+                });
+            }
+        }
+
+        document.addEventListener('deviceready', initApp, false);
+    </script>
+</head>
+<body>
+    <!-- PERCENT LOADER START-->
+    <div id="mainLoader">0</div>
+    <!-- PERCENT LOADER END-->
+
+    <!-- CONTENT START-->
+    <div id="mainHolder">
+
+        <!-- BROWSER NOT SUPPORT START-->
+        <div id="notSupportHolder">
+            <div class="notSupport">YOUR BROWSER ISN'T SUPPORTED.<br/>PLEASE UPDATE YOUR BROWSER IN ORDER TO RUN THE GAME</div>
+        </div>
+        <!-- BROWSER NOT SUPPORT END-->
+
+        <!-- ROTATE INSTRUCTION START-->
+        <div id="rotateHolder">
+            <div class="mobileRotate">
+                <div class="rotateDesc">Rotate your device <br/>to landscape</div>
             </div>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </body>
+        <!-- ROTATE INSTRUCTION END-->
+
+        <!-- CANVAS START-->
+        <div id="canvasHolder">
+            <canvas id="gameCanvas" width="1024" height="768"></canvas>
+        </div>
+        <!-- CANVAS END-->
+
+    </div>
+    <!-- CONTENT END-->
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
+
+    <script src="js/vendor/detectmobilebrowser.js"></script>
+    <script src="js/vendor/preloadjs-0.6.1.min.js"></script>
+    <script src="js/vendor/easeljs-0.8.1.min.js"></script>
+    <script src="js/vendor/soundjs-0.6.1.min.js"></script>
+    <script src="js/vendor/TweenMax.min.js"></script>
+
+    <script src="js/plugins.js"></script>
+    <script src="js/sound.js"></script>
+    <script src="js/canvas.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/mobile.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/loader.js"></script>
+    <script src="js/init.js"></script>
+</body>
 </html>
