--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
 
         <title>Olympic Quiz Game</title>
 
-        <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="icon.png" type="image/x-icon">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 
