--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <!--
-        <meta name="Title" content="Olympic Quiz Game" />
+        <meta name="Title" content="Olympic Quiz Game - Rio 2016" />
         <meta name="description" content="Olympic Quiz Game is a free general knowledge quiz questions and multiple choice answers on Rio Olympic.">
     		<meta name="keywords" content="quiz, game, olympic, knowledge, questions, choice, answers, rio, 2016, brain, marakana, idiot,brazil">
 
@@ -21,7 +21,7 @@
         <meta name="twitter:image" content="http://demonisblack.com/code/quizgame/game/share.jpg" />
 -->
 
-        <title>Olympic Quiz Game</title>
+        <title>Olympic Quiz Game - Rio 2016</title>
 
         <link rel="shortcut icon" href="icon.png" type="image/x-icon">
         <link rel="stylesheet" href="css/normalize.css">
