Updated the name of the App. Uncommented meta tags.

--- a/www/index.html
+++ b/www/index.html
@@ -3,25 +3,24 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<!--
-        <meta name="Title" content="Olympic Quiz Game - Rio 2016" />
+
+        <meta name="Title" content="Rio Olympic 2016 Quiz Game" />
         <meta name="description" content="Olympic Quiz Game is a free general knowledge quiz questions and multiple choice answers on Rio Olympic.">
     		<meta name="keywords" content="quiz, game, olympic, knowledge, questions, choice, answers, rio, 2016, brain, marakana, idiot,brazil">
 
-        &lt;!&ndash; for Facebook &ndash;&gt;
+        <!-- for Facebook -->
         <meta property="og:title" content="Quiz Game"/>
         <meta property="og:site_name" content="Quiz Game"/>
         <meta property="og:image" content="http://demonisblack.com/code/quizgame/game/share.jpg" />
         <meta property="og:url" content="http://demonisblack.com/code/quizgame/game/" />
         <meta property="og:description" content="Olympic Quiz Game is a free general knowledge quiz questions and multiple choice answers on Rio Olympic.">
 
-        &lt;!&ndash; for Twitter &ndash;&gt;
+        <!-- for Twitter -->
         <meta name="twitter:title" content="Quiz Game" />
         <meta name="twitter:description" content="Olympic Quiz Game is a free general knowledge quiz questions and multiple choice answers on Rio Olympic." />
         <meta name="twitter:image" content="http://demonisblack.com/code/quizgame/game/share.jpg" />
--->
 
-        <title>Olympic Quiz Game - Rio 2016</title>
+        <title>Rio Olympic 2016 Quiz Game</title>
 
         <link rel="shortcut icon" href="icon.png" type="image/x-icon">
         <link rel="stylesheet" href="css/normalize.css">
