--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
                 AdMob.prepareInterstitial({
                     adId: admobid.interstitial,
                     isTesting: true,
-                    autoShow: true
+                    autoShow: false
                 });
             }
 
@@ -67,13 +67,14 @@
                 }
 
                 loadInterstitialAd();
+                AdmMob.showInterstitial().
             }
 
             function loadInterstitialAd() {
                 setInterval(function() {
                     if (questionCountNum % 3 == 0) {
                         if (AdMob) {
-                            interstitialAd();
+                            AdMob.showInterstitial();
                         }
                     }
                 }, 1000);
