Checking a fix for interstitial ad.

--- a/www/index.html
+++ b/www/index.html
@@ -64,10 +64,9 @@
                 if (AdMob) {
                     bannerAd();
                     interstitialAd();
+                    AdmMob.showInterstitial();
+                    loadInterstitialAd();
                 }
-
-                loadInterstitialAd();
-                AdmMob.showInterstitial().
             }
 
             function loadInterstitialAd() {
