--- a/www/index.html
+++ b/www/index.html
@@ -64,7 +64,8 @@
                 if (AdMob) {
                     bannerAd();
                     interstitialAd();
-                    AdmMob.showInterstitial();
+
+                    AdMob.showInterstitial();
                     loadInterstitialAd();
                 }
             }
