--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,7 @@
                 AdMob.createBanner({
                     adId : admobid.banner,
                     position : AdMob.AD_POSITION.BOTTOM_CENTER,
+                    overlap: true,
                     isTesting: true,
                     autoShow : true
                 });
@@ -56,7 +57,7 @@
                 AdMob.prepareInterstitial({
                     adId: admobid.interstitial,
                     isTesting: true,
-                    autoShow: false
+                    autoShow: true
                 });
             }
 
@@ -64,28 +65,15 @@
                 if (AdMob) {
                     bannerAd();
                     interstitialAd();
-
-                    AdMob.showInterstitial();
-                    loadInterstitialAd();
                 }
-            }
 
-            function loadInterstitialAd() {
-                setInterval(function() {
-                    if (questionCountNum % 3 == 0) {
-                        if (AdMob) {
-                            AdMob.showInterstitial();
-                        }
+                setInterval(function(){
+                    if (AdMob) {
+                        AdMob.removeBanner();
+                        bannerAd();
                     }
-                }, 1000);
+                }, 20000);
             }
-
-            setInterval(function(){
-                if (AdMob) {
-                    AdMob.removeBanner();
-                    bannerAd();
-                }
-            }, 10000);
 
             document.addEventListener('deviceready', initApp, false);
         </script>
@@ -96,7 +84,7 @@
         <!-- PERCENT LOADER END-->
         
         <!-- CONTENT START-->
-        <div id="mainHolder">
+        <div id="mainHolder" style="bottom: 95px;">
         
         	<!-- BROWSER NOT SUPPORT START-->
         	<div id="notSupportHolder">
