--- a/www/index.html
+++ b/www/index.html
@@ -70,13 +70,13 @@
             }
 
             function loadInterstitialAd() {
-                setInterval(function() {
-                    if (questionCountNum % 3 == 0) {
-                        if (AdMob) {
-                            interstitialAd();
-                        }
-                    }
-                }, 1000);
+//                setInterval(function() {
+//                    if (questionCountNum % 3 == 0) {
+//                        if (AdMob) {
+//                            interstitialAd();
+//                        }
+//                    }
+//                }, 20000);
             }
 
             setInterval(function(){
