--- a/www/index.html
+++ b/www/index.html
@@ -65,19 +65,16 @@
                 if (AdMob) {
                     bannerAd();
                     interstitialAd();
-                    loadInterstitialAd();
                 }
             }
 
-            function loadInterstitialAd() {
-//                setInterval(function() {
-//                    if (questionCountNum % 3 == 0) {
-//                        if (AdMob) {
-//                            interstitialAd();
-//                        }
-//                    }
-//                }, 20000);
-            }
+            setInterval(function() {
+                if (questionCountNum % 3 == 0) {
+                    if (AdMob) {
+                        interstitialAd();
+                    }
+                }
+            }, 1000);
 
             setInterval(function(){
                 if (AdMob) {
