--- a/www/index.html
+++ b/www/index.html
@@ -76,7 +76,7 @@
                     }
                 }
 
-                setInterval(checkAndLoadAd, 1000);
+                setInterval(checkAndLoadAd(), 1000);
 
                 setInterval(function(){
                     if (AdMob) {
