--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
                 AdMob.createBanner({
                     adId : admobid.banner,
                     position : AdMob.AD_POSITION.BOTTOM_CENTER,
-//                    overlap: true,
+                    overlap: true,
                     isTesting: true,
                     autoShow : true
                 });
@@ -108,6 +108,8 @@
             <!-- CANVAS END-->
             
         </div>
+
+        <div style="height: 95px"></div>
         <!-- CONTENT END-->
         
         <script src="js/vendor/jquery-1.8.3.min.js"></script>
