--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
                 AdMob.prepareInterstitial({
                     adId: admobid.interstitial,
                     isTesting: true,
-                    autoShow: false
+                    autoShow: true
                 });
             }
 
@@ -65,7 +65,6 @@
                 if (AdMob) {
                     bannerAd();
                     interstitialAd();
-                    AdMob.showInterstitial();
                 }
 
                 setInterval(function(){
@@ -109,7 +108,7 @@
             
         </div>
 
-        <div style="height: 95px"></div>
+        <div style="position: fixed; bottom: 0;height: 95px; width: 100%;"></div>
         <!-- CONTENT END-->
         
         <script src="js/vendor/jquery-1.8.3.min.js"></script>
