Updated color values. Allowed only portrait move.

--- a/www/index.html
+++ b/www/index.html
@@ -95,7 +95,7 @@
             <!-- ROTATE INSTRUCTION START-->
             <div id="rotateHolder">
                 <div class="mobileRotate">
-                        <div class="rotateDesc">Rotate your device <br/>to landscape</div>
+                    <div class="rotateDesc">Rotate your device <br/>to portrait</div>
                 </div>
             </div>
             <!-- ROTATE INSTRUCTION END-->
