Removed test add.

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
                     adId : admobid.banner,
                     position : AdMob.AD_POSITION.TOP_CENTER,
                     overlap: false,
-                    isTesting: true,
+                    isTesting: false,
                     autoShow : true
                 });
             }
@@ -57,7 +57,7 @@
             function interstitialAd() {
                 AdMob.prepareInterstitial({
                     adId: admobid.interstitial,
-                    isTesting: true,
+                    isTesting: false,
                     autoShow: true
                 });
             }
