Three question sets are added

--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
         <meta name="twitter:description" content="Olympic Quiz Game is a free general knowledge quiz questions and multiple choice answers on Rio Olympic." />
         <meta name="twitter:image" content="http://demonisblack.com/code/quizgame/game/share.jpg" />
 
-        <title>Free Quiz Game - Rio Olympic 2016</title>
+        <title>Free Quiz Game - Halloween 2016</title>
 
         <link rel="shortcut icon" href="icon.png" type="image/x-icon">
         <link rel="stylesheet" href="css/normalize.css">
